--- a/_dist/jsons/langs/qps-ploc.json
+++ b/_dist/jsons/langs/qps-ploc.json
@@ -30,7 +30,9 @@
             },
             "help": {
                 "title": "[!!! ÂƲáïℓáβℓè çô₥₥áñδƨ !!!]",
+                "title_groups": "[!!! Çô₥₥áñδ ϱřôúƥƨ !!!]",
                 "desc": "[!!! *`[ářϱú₥èñƭ=X]` - áñ ôƥƭïôñáℓ ářϱú₥èñƭ. Ìƒ ïƭ ωáƨñ'ƭ ƨƭáƭèδ β¥ ¥ôú - ïƭ'ℓℓ δèƒáúℓƭ ƭô X.*\n*`<ářϱú₥èñƭ>` ₥èáñƨ ƭλáƭ ïƭ ïƨ řè9úïřèδ.* !!!]",
+                "desc_groups": "[!!! *Ûƨè `{prefix}λèℓƥ <ϱřôúƥ ñá₥è>` ƭô ƨèè ƭλè ƨúβçô₥₥áñδƨ.* !!!]",
                 "usage": "[!!! **Çô₥₥áñδ úƨáϱè:** !!!]",
                 "description": "[!!! **Ðèƨçřïƥƭïôñ:** !!!]",
                 "extra": "[!!! **Éжƭřá:** !!!]",
