--- a/_dist/jsons/langs/ru.json
+++ b/_dist/jsons/langs/ru.json
@@ -33,7 +33,9 @@
             },
             "help": {
                 "title": "Доступные команды",
+                "title_groups": "Группы команд",
                 "desc": "*`[аргумент=X]` - необязательный аргумент, если он не будет указан - будет стоять стандартное значение X.*\n*`<аргумент>` - обязательный аргумент, без него команда не сработает.*",
+                "desc_groups": "*Используйте `{prefix}help <имя группы>`, чтобы увидеть её подкоманды.*",
                 "usage": "**Использование команды:**",
                 "description": "**Описание:**",
                 "extra": "**Дополнительно:**",
