--- a/_dist/jsons/langs/qps-ploc.json
+++ b/_dist/jsons/langs/qps-ploc.json
@@ -95,7 +95,11 @@
                 "mem": "[!!! RÂM úƨáϱè !!!]",
                 "python_ver": "[!!! Þ¥ƭλôñ ïñƭèřƥřèƭèř Ʋèřƨïôñ !!!]",
                 "nextcord_ver": "[!!! Nèжƭçôřδ ℓïβřář¥ Ʋèřƨïôñ !!!]",
-                "bot_uptime": "[!!! ßôƭ úƥƭï₥è !!!]"
+                "bot_uptime": "[!!! ßôƭ úƥƭï₥è !!!]",
+                "bot_repo": "[!!! ßôƭ βúïℓδ ïñƒô !!!]",
+                "engine_repo": "[!!! Éñϱïñè βúïℓδ ïñƒô !!!]",
+                "revision": "[!!! Çúřřèñƭ řèƲïƨïôñ !!!]",
+                "timestamp": "[!!! Çô₥₥ïƭƭèδ áƭ !!!]"
             }
         },
         "settings": {
