--- a/_dist/jsons/langs/qps-ploc.json
+++ b/_dist/jsons/langs/qps-ploc.json
@@ -98,8 +98,9 @@
                 "bot_uptime": "[!!! ßôƭ úƥƭï₥è !!!]",
                 "bot_repo": "[!!! ßôƭ βúïℓδ ïñƒô !!!]",
                 "engine_repo": "[!!! Éñϱïñè βúïℓδ ïñƒô !!!]",
-                "revision": "[!!! Çúřřèñƭ řèƲïƨïôñ !!!]",
-                "timestamp": "[!!! Çô₥₥ïƭƭèδ áƭ !!!]"
+                "timestamp": "[!!! Çô₥₥ïƭƭèδ áƭ !!!]",
+                "branch": "[!!! Çúřřèñƭ βřáñçλ !!!]",
+                "commit_sha": "[!!! RèƲïƨïôñ λáƨλ !!!]"
             }
         },
         "settings": {
