--- a/_dist/jsons/langs/ru.json
+++ b/_dist/jsons/langs/ru.json
@@ -95,8 +95,9 @@
                 "bot_uptime": "Время работы бота",
                 "bot_repo": "Сборка бота",
                 "engine_repo": "Сборка движка",
-                "revision": "Текущая ревизия",
-                "timestamp": "Время создания"
+                "timestamp": "Время создания",
+                "branch": "Активная ветка",
+                "commit_sha": "Хеш ревизии"
             }
         },
         "settings": {
