--- a/_dist/jsons/langs/de.json
+++ b/_dist/jsons/langs/de.json
@@ -98,8 +98,9 @@
                 "bot_uptime": "Bot uptime [TRANSLATE ME]",
                 "bot_repo": "Bot build info [TRANSLATE ME]",
                 "engine_repo": "Engine build info [TRANSLATE ME]",
-                "revision": "Current revision [TRANSLATE ME]",
-                "timestamp": "Committed at [TRANSLATE ME]"
+                "timestamp": "Committed at [TRANSLATE ME]",
+                "branch": "Current branch [TRANSLATE ME]",
+                "commit_sha": "Revision hash [TRANSLATE ME]"
             }
         },
         "settings": {
