--- a/_dist/jsons/langs/qps-ploc.json
+++ b/_dist/jsons/langs/qps-ploc.json
@@ -24,21 +24,21 @@
         "info": {
             "about": {
                 "desc": "[!!! [ßôƭ δèƨçřïƥƭïôñ]\n\n> *Ûƨè `{prefix}λèℓƥ` ƭô ϱèƭ ƭλè ïñƒôř₥áƭïôñ áβôúƭ ₥ôƨƭ çô₥₥áñδƨ.* !!!]",
-                "indev": "[!!! \n\nTλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÐÉßÛG ₥ôδè ƭλáƭ ₥èáñƨ ƨô₥è βúϱƨ ₥á¥ áƥƥèář. Wè řèçô₥₥èñδ ¥ôú ƭô řèƒřáïñ ƒřô₥ úƨïñϱ ïƭ úñƭïℓ ƭλè ₥áïñƭáïñáñçè ïƨ çô₥ƥℓèƭè. !!!]",
+                "indev": "[!!! \n\nTλè βôƭ ïƨ řúññïñϱ ïñ ÐÉßÛG ₥ôδè áñδ ïƭƨ ƨƭáβℓè ôƥèřáƭïôñ ïƨ ñôƭ ϱúářáñƭèèřèδ. Ìƭ ïƨ řèçô₥₥èñδèδ ƭô řèƒřáïñ ƒřô₥ úƨïñϱ ƭλè βôƭ úñƭïℓ ƭλè ₥áïñƭáïñáñçè ïƨ ƒïñïƨλèδ. !!!]",
                 "anastellos": "[!!! Þôωèřèδ β¥ Âñáƨƭèℓℓôƨ Éñϱïñè !!!]",
                 "creator": "[!!! <> ωïƭλ ❤ β¥ {creator} !!!]"
             },
             "help": {
                 "title": "[!!! ÂƲáïℓáβℓè çô₥₥áñδƨ !!!]",
                 "title_groups": "[!!! Çô₥₥áñδ ϱřôúƥƨ !!!]",
-                "desc": "[!!! *`[ářϱú₥èñƭ=X]` - áñ ôƥƭïôñáℓ ářϱú₥èñƭ. Ìƒ ïƭ ωáƨñ'ƭ ƨƭáƭèδ β¥ ¥ôú - ïƭ'ℓℓ δèƒáúℓƭ ƭô X.*\n*`<ářϱú₥èñƭ>` ₥èáñƨ ƭλáƭ ïƭ ïƨ řè9úïřèδ.* !!!]",
+                "desc": "[!!! *`[ářϱú₥èñƭ=X]` ïƨ áñ ôƥƭïôñáℓ ářϱú₥èñƭ (è₥ƥƭ¥ δèƒáúℓƭƨ ƭô X).*\n*`<ářϱú₥èñƭ>` řè9úïřèƨ ƭλè èжƥℓïçïƭ ïñƥúƭ.* !!!]",
                 "desc_groups": "[!!! *Ûƨè `{prefix}λèℓƥ <ϱřôúƥ ñá₥è>` ƭô ƨèè ƭλè ƨúβçô₥₥áñδƨ.* !!!]",
                 "usage": "[!!! **Çô₥₥áñδ úƨáϱè:** !!!]",
                 "description": "[!!! **Ðèƨçřïƥƭïôñ:** !!!]",
                 "extra": "[!!! **Éжƭřá:** !!!]",
                 "commands": {
                     "help": {
-                        "desc": "[!!! Þřïñƭƨ ƭλïƨ ₥èƨƨáϱè. !!!]"
+                        "desc": "[!!! Þřïñƭ ƭλïƨ ₥èƨƨáϱè. !!!]"
                     },
                     "privacy": {
                         "desc": "[!!! §λôω ƭλè ÞřïƲáç¥ Þôℓïç¥ δôçú₥èñƭ. !!!]",
@@ -47,23 +47,23 @@
                         }
                     },
                     "about": {
-                        "desc": "[!!! Þřïñƭƨ ƭλè ïñƒô áβôúƭ ƭλè βôƭ. !!!]"
+                        "desc": "[!!! Þřïñƭ ƭλè ïñƒô áβôúƭ ƭλè βôƭ. !!!]"
                     },
                     "ping": {
-                        "desc": "[!!! Rèƭúřñƨ ƭλè ℓáƭèñç¥ ƭï₥è. Ýôú ₥á¥ ωáñƭ ƭô úƨè ƭλáƭ ƭô çλèçƙ ƭλè βôƭ ωôřƙïñϱ. !!!]"
+                        "desc": "[!!! Rèƭúřñ ℓáƭèñç¥ ƭï₥è βèƭωèèñ ƭλè ƨèřƲèř áñδ ƭλè βôƭ. !!!]"
                     },
                     "settings": {
-                        "desc": "[!!! Þřïñƭƨ ƭλè çúřřèñƭ ƨèřƲèř çôñƒïϱúřáƭïôñ. Óñℓ¥ áδ₥ïñƨ ářè áℓℓôωèδ ƭô úƨè ƭλïƨ çô₥₥áñδ áñδ èƲèř¥ ƨúβçô₥₥áñδ. !!!]"
+                        "desc": "[!!! Þřïñƭ ƭλè çúřřèñƭ ℓôçáℓ ƨèřƲèř çôñƒïϱúřáƭïôñ. Óñℓ¥ áδ₥ïñƨ ářè áℓℓôωèδ ƭô úƨè ƭλïƨ ϱřôúƥ áñδ ƨúβçô₥₥áñδƨ. !!!]"
                     },
                     "prefix": {
-                        "desc": "[!!! Çλáñϱèƨ ƭλè βôƭ ƥřèƒïж ƒôř ƭλïƨ ƨèřƲèř. É₥ƥƭ¥ ářϱú₥èñƭ řèƨèƭƨ ƭλè ƨèƭƭïñϱ ƭô `!`. !!!]",
+                        "desc": "[!!! Çλáñϱè ƭλè βôƭ ƥřèƒïж ƒôř ƭλïƨ ƨèřƲèř. É₥ƥƭ¥ ářϱú₥èñƭ řèƨèƭƨ ƭλè ƨèƭƭïñϱ ƭô `{def_prefix}`. !!!]",
                         "args": {
                             "new_prefix": "[!!! ñèω ƥřèƒïж !!!]"
                         }
                     },
                     "language": {
-                        "desc": "[!!! Çλáñϱèƨ ƭλè βôƭ ℓáñϱúáϱè ƒôř ƭλïƨ ƨèřƲèř. !!!]",
-                        "extra": "[!!! ÂƲáïℓáβℓè ℓáñϱúáϱèƨ: `èñ`, `řú`, `δè` (₥áïñƭáïñèδ β¥ Zèřô), `9ƥƨ-ƥℓôç` !!!]",
+                        "desc": "[!!! Çλáñϱè ƭλè βôƭ ℓáñϱúáϱè ƒôř ƭλïƨ ƨèřƲèř. !!!]",
+                        "extra": "[!!! ÂƲáïℓáβℓè ℓáñϱúáϱèƨ: `{lang_names}`. !!!]",
                         "args": {
                             "new_lang": "[!!! ñèω ℓáñϱúáϱè !!!]"
                         }
@@ -76,13 +76,9 @@
         },
         "technical": {
             "stop": "[!!! *§ƭôƥƥïñϱ ƭλè βôƭ...* !!!]",
-            "shutdown": {
-                "msg": "[!!! *§ƭôƥƥïñϱ ƭλè βôƭ áñδ ƨλúƭƭïñϱ δôωñ ƭλè λôƨƭ...* !!!]",
-                "error_indev": "[!!! *Tλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÐÉßÛG ₥ôδè. Hôƨƭ ƨλúƭδôωñ ïƨ úñáƲáïℓáβℓè.* !!!]"
-            },
             "reload": {
-                "start": "[!!! *Rèïñïƭïáℓïƺïñϱ ƨƭářƭèδ...* !!!]",
-                "error": "[!!! *Âñ èжçèƥƭïôñ ôççúřřèδ ωλïℓè ℓôáδïñϱ {i} ₥ôδúℓè.* !!!]",
+                "start": "[!!! *Môδúℓèƨ řèïñïƭïáℓïƺïñϱ ƨƭářƭèδ...* !!!]",
+                "error": "[!!! *Âñ èжçèƥƭïôñ ôççúřřèδ ωλïℓè ℓôáδïñϱ {i} ₥ôδúℓè.*{traceback} !!!]",
                 "success": "[!!! *Rèïñïƭïáℓïƺïñϱ çô₥ƥℓèƭè.* !!!]"
             },
             "indev_notif": "[!!! \n> **WÂRNÌNG! Tλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÐÉßÛG ₥ôδè. Þℓèáƨè řèƒřáïñ ƒřô₥ úƨïñϱ ƭλïƨ ₥ôδè ïƒ ƭλèřè ářè ñô ƭèƨƭƨ řúññïñϱ.** !!!]",
@@ -116,7 +112,7 @@
             },
             "prefix": {
                 "title": "[!!! Þřèƒïж çλáñϱèδ ƨúççèƨƨƒúℓℓ¥ !!!]",
-                "desc": "[!!! Tλè ñèω ƥřèƒïж: `{new_prefix}`. !!!]"
+                "desc": "[!!! Nèω ƥřèƒïж: `{new_prefix}`. !!!]"
             },
             "lang": {
                 "title": "[!!! ßôƭ ℓáñϱúáϱè çλáñϱèδ ƨúççèƨƨƒúℓℓ¥ !!!]",
@@ -155,7 +151,8 @@
             "command_not_found": "[!!! *Tλè ƨƥèçïƒïèδ çô₥₥áñδ ñôƭ ƒôúñδ.* !!!]",
             "forbidden": "[!!! *§ô₥èƭλïñϱ ωôñ'ƭ ℓèƭ ₥è δô ƭλïƨ, ƨôřř¥.* !!!]",
             "not_owner": "[!!! *Óñℓ¥ βôƭ ôωñèř ïƨ áℓℓôωèδ ƭô δô ƭλáƭ.* !!!]",
-            "no_history_access": "[!!! *Tλè βôƭ çáññôƭ áççèƨƨ ƭλè ₥èƨƨáϱè λïƨƭôř¥ áñδ ƭλèřèƒôřè úñáβℓè ƭô çô₥ƥℓèƭè ƭλïƨ áçƭïôñ.* !!!]"
+            "no_history_access": "[!!! *Tλè βôƭ çáññôƭ áççèƨƨ ƭλè ₥èƨƨáϱè λïƨƭôř¥ áñδ ƭλèřèƒôřè úñáβℓè ƭô çô₥ƥℓèƭè ƭλïƨ áçƭïôñ.* !!!]",
+            "l10n_unsupported": "[!!! *Tλïƨ çô₥₥áñδ ïƨ ñôƭ ƨúƥƥôřƭèδ β¥ ƭλè çúřřèñƭ ℓáñϱúáϱè.* !!!]"
         },
         "privacy": {
             "privacy": {
