--- a/_dist/jsons/langs/ru.json
+++ b/_dist/jsons/langs/ru.json
@@ -27,40 +27,40 @@
         "info": {
             "about": {
                 "desc": "[Описание бота]\n\n> *Чтобы получить информацию обо всех доступных командах - введите `{prefix}help`.*",
-                "indev": "\n\nВ данный момент бот работает в режиме DEBUG, что означает его текущую нестабильность. Рекомендуется воздержаться от использования бота до завершения работ и его перевода в нормальный режим.",
-                "anastellos": "Работает на базе Anastellos Engine",
+                "indev": "\n\nВ данный момент бот работает в режиме DEBUG, и его корректная работа не гарантирована. Рекомендуется воздержаться от использования до завершения технических работ.",
+                "anastellos": "Создано на базе Anastellos Engine",
                 "creator": "<> {creator} с ❤"
             },
             "help": {
                 "title": "Доступные команды",
                 "title_groups": "Группы команд",
-                "desc": "*`[аргумент=X]` - необязательный аргумент, если он не будет указан - будет стоять стандартное значение X.*\n*`<аргумент>` - обязательный аргумент, без него команда не сработает.*",
+                "desc": "*`[аргумент=X]` - необязательный аргумент (значение приравнивается к X).*\n*`<аргумент>` - требует прямого ввода аргумента.*",
                 "desc_groups": "*Используйте `{prefix}help <имя группы>`, чтобы увидеть её подкоманды.*",
                 "usage": "**Использование команды:**",
                 "description": "**Описание:**",
                 "extra": "**Дополнительно:**",
                 "commands": {
                     "help": {
-                        "desc": "Выводит данное сообщение."
+                        "desc": "Вывести данное сообщение."
                     },
                     "about": {
                         "desc": "Выводит сообщение с информацией о боте."
                     },
                     "ping": {
-                        "desc": "Возвращает тестовое сообщение с временем задержки. Можно применить для проверки, когда бот сильно тормозит."
+                        "desc": "Вывести сообщение с временем задержки между ботом и сервером."
                     },
                     "settings": {
-                        "desc": "Выводит текущую конфигурацию бота на сервере. Эту команду и все подкоманды могут выполнять только администраторы."
+                        "desc": "Показать текущую конфигурацию бота на сервере. Эту команду и все её подкоманды могут выполнять только администраторы."
                     },
                     "prefix": {
-                        "desc": "Меняет префикс бота на сервере. Пустой аргумент - сброс на `!`.",
+                        "desc": "Поменять префикс бота на сервере. Пустой аргумент - сброс на `{def_prefix}`.",
                         "args": {
                             "new_prefix": "новый префикс"
                         }
                     },
                     "language": {
-                        "desc": "Меняет язык бота для этого сервера.",
-                        "extra": "Доступные языки: `en`, `ru`, `de` (поддерживается Zero), `qps-ploc`",
+                        "desc": "Поменять язык бота для этого сервера.",
+                        "extra": "Доступные языки: `{lang_names}`.",
                         "args": {
                             "new_lang": "новый язык"
                         }
@@ -73,13 +73,9 @@
         },
         "technical": {
             "stop": "*Останавливаю бота...*",
-            "shutdown": {
-                "msg": "*Останавливаю бота и выключаю компьютер...*",
-                "error_indev": "*Бот запущен в режиме DEBUG. Выключение компьютера недоступно.*"
-            },
             "reload": {
-                "start": "*Начинаю реинициализацию...*",
-                "error": "*Произошла ошибка реинициализации после загрузки модуля {i}.*",
+                "start": "*Начинаю реинициализацию модулей...*",
+                "error": "*Произошла ошибка реинициализации после загрузки модуля {i}.*{traceback}",
                 "success": "*Реинициализация успешно завершена.*"
             },
             "indev_notif": "\n> **ВНИМАНИЕ! Бот работает в режиме DEBUG. Пожалуйста, избегайте использования этого режима, если не проводится никаких тестов.**",
@@ -109,7 +105,7 @@
                 "enabled_responses": "Триггеры",
                 "telemetry": "Канал-аудит",
                 "verbose_random": "Подробные результаты рандома",
-                "multilevel": "*сложная структура*"
+                "multilevel": "*структурная опция*"
             },
             "prefix": {
                 "title": "Префикс успешно изменён",
@@ -154,7 +150,7 @@
         },
         "global_errors": {
             "max_concurrency": "*Команда уже находится в процессе выполнения максимальное количество раз.*",
-            "channel_not_found": "*Кажется, указанного канала не существует на этом сервере.*",
+            "channel_not_found": "*Указанный канал не найден на этом сервере.*",
             "bad_argument": "*Указаны некорректные аргументы команды.*",
             "insufficient_perms": "*Недостаточно прав для выполнения команды.*",
             "bot_insufficient_perms": "*У бота недостаточно прав для выполнения этого действия.*",
@@ -163,7 +159,8 @@
             "command_not_found": "*Указанная команда не найдена.*",
             "forbidden": "*Что-то не даёт мне сделать это, извините.*",
             "not_owner": "*Это может сделать только владелец бота.*",
-            "no_history_access": "*Бот не имеет доступа к истории сообщений в канале и поэтому не может выполнить это действие.*"
+            "no_history_access": "*Бот не имеет доступа к истории сообщений в канале и поэтому не может выполнить это действие.*",
+            "l10n_unsupported": "*Данная команда недоступна в текущей локализации.*"
         },
         "privacy": {}
     },
