--- a/_dist/jsons/langs/qps-ploc.json
+++ b/_dist/jsons/langs/qps-ploc.json
@@ -105,10 +105,9 @@
                 "lang": "[!!! £áñϱúáϱè !!!]",
                 "enabled": "[!!! **èñáβℓèδ** !!!]",
                 "disabled": "[!!! **δïƨáβℓèδ** !!!]",
-                "enabled_responses": "[!!! Rèƨƥôñƨèƨ !!!]",
-                "telemetry": "[!!! £ôϱ çλáññèℓ !!!]",
-                "verbose_random": "[!!! Vèřβôƨè RNG !!!]",
-                "multilevel": "[!!! *₥úℓƭï-ℓèƲèℓ* !!!]"
+                "multilevel": "[!!! *₥úℓƭï-ℓèƲèℓ* !!!]",
+                "toggle_cog": "[!!! Ðïƨáβℓè/èñáβℓè çôϱƨ !!!]",
+                "list": "[!!! *ℓïƨƭ* !!!]"
             },
             "prefix": {
                 "title": "[!!! Þřèƒïж çλáñϱèδ ƨúççèƨƨƒúℓℓ¥ !!!]",
@@ -138,6 +137,14 @@
                         "desc": "[!!! Tλè βôƭ ïƨ ƨƭá¥ïñϱ ôñ ƭλè ƨèřƲèř. Wè ωôñ'ƭ δïƨáƥƥôïñƭ ¥ôú. !!!]"
                     }
                 }
+            },
+            "toggle_cog": {
+                "title": "[!!! Çôϱ ƨƭáƭúƨ !!!]",
+                "nocog_error": "[!!! Tλèřè ïƨ ñô çôϱ ωïƭλ ƨúçλ ñá₥è. !!!]",
+                "intcog_error": "[!!! Tλïƨ çôϱ ïƨ èƨƨèñƭïáℓ ƒôř ƭλè βôƭ áñδ çáññôƭ βè δïƨáβℓèδ. !!!]",
+                "status_desc": "[!!! \"{cog_name}\" çôϱ ïƨ çúřřèñƭℓ¥ {status} ôñ ƭλïƨ ƨèřƲèř. !!!]",
+                "enable_desc": "[!!! \"{cog_name}\" çôϱ λáƨ βèèñ èñáβℓèδ. !!!]",
+                "disable_desc": "[!!! \"{cog_name}\" çôϱ λáƨ βèèñ δïƨáβℓèδ. !!!]"
             }
         },
         "global_errors": {
