--- a/_dist/jsons/langs/qps-ploc.json
+++ b/_dist/jsons/langs/qps-ploc.json
@@ -30,7 +30,9 @@
             },
             "help": {
                 "title": "[!!! ÂƲáïℓáβℓè çô₥₥áñδƨ !!!]",
-                "title_groups": "[!!! Çô₥₥áñδ ϱřôúƥƨ !!!]",
+                "active_cogs": "[!!! ÂçƭïƲè çôϱƨ !!!]",
+                "inactive_cogs": "[!!! ÌñáçƭïƲè çôϱƨ !!!]",
+                "internal_cogs": "[!!! Ìñƭèřñáℓ çôϱƨ !!!]",
                 "desc": "[!!! *`[ářϱú₥èñƭ=X]` ïƨ áñ ôƥƭïôñáℓ ářϱú₥èñƭ (è₥ƥƭ¥ δèƒáúℓƭƨ ƭô X).*\n*`<ářϱú₥èñƭ>` řè9úïřèƨ ƭλè èжƥℓïçïƭ ïñƥúƭ.* !!!]",
                 "desc_groups": "[!!! *Ûƨè `{prefix}λèℓƥ <ϱřôúƥ ñá₥è>` ƭô ƨèè ƭλè ƨúβçô₥₥áñδƨ.* !!!]",
                 "usage": "[!!! **Çô₥₥áñδ úƨáϱè:** !!!]",
@@ -103,10 +105,10 @@
                 "title": "[!!! §èřƲèř ƥřèƒèřèñçèƨ !!!]",
                 "prefix": "[!!! Þřèƒïж !!!]",
                 "lang": "[!!! £áñϱúáϱè !!!]",
-                "enabled": "[!!! **èñáβℓèδ** !!!]",
-                "disabled": "[!!! **δïƨáβℓèδ** !!!]",
+                "toggle_cog": "[!!! ÂçƭïƲè/ïñáçƭïƲè çôϱƨ !!!]",
+                "enabled": "[!!! **áçƭïƲè** !!!]",
+                "disabled": "[!!! **ïñáçƭïƲè** !!!]",
                 "multilevel": "[!!! *₥úℓƭï-ℓèƲèℓ* !!!]",
-                "toggle_cog": "[!!! Ðïƨáβℓè/èñáβℓè çôϱƨ !!!]",
                 "list": "[!!! *ℓïƨƭ* !!!]"
             },
             "prefix": {
@@ -140,11 +142,13 @@
             },
             "toggle_cog": {
                 "title": "[!!! Çôϱ ƨƭáƭúƨ !!!]",
+                "active": "[!!! áçƭïƲè !!!]",
+                "inactive": "[!!! ïñáçƭïƲè !!!]",
                 "nocog_error": "[!!! Tλèřè ïƨ ñô çôϱ ωïƭλ ƨúçλ ñá₥è. !!!]",
-                "intcog_error": "[!!! Tλïƨ çôϱ ïƨ èƨƨèñƭïáℓ ƒôř ƭλè βôƭ áñδ çáññôƭ βè δïƨáβℓèδ. !!!]",
+                "intcog_error": "[!!! Tλïƨ çôϱ ïƨ èƨƨèñƭïáℓ ƒôř ƭλè βôƭ áñδ çáññôƭ βè δèáçƭïƲáƭèδ. !!!]",
                 "status_desc": "[!!! \"{cog_name}\" çôϱ ïƨ çúřřèñƭℓ¥ {status} ôñ ƭλïƨ ƨèřƲèř. !!!]",
-                "enable_desc": "[!!! \"{cog_name}\" çôϱ λáƨ βèèñ èñáβℓèδ. !!!]",
-                "disable_desc": "[!!! \"{cog_name}\" çôϱ λáƨ βèèñ δïƨáβℓèδ. !!!]"
+                "enable_desc": "[!!! \"{cog_name}\" çôϱ λáƨ βèèñ áçƭïƲáƭèδ. !!!]",
+                "disable_desc": "[!!! \"{cog_name}\" çôϱ λáƨ βèèñ δèáçƭïƲáƭèδ. !!!]"
             }
         },
         "global_errors": {
